Links to trove now work for the images as well, fixed CSS that got eaten by git (lightbox had overflow hidden still, so pictures were being cropped)

--- a/css/town.css
+++ b/css/town.css
@@ -241,6 +241,7 @@
     padding: 10px;
 }
 #box .body {
+    overflow: visible;
 }
 
 #box .trove-content-row {
